Quorum/Library/Tests/Expressions/Pass/DivIntInt.quorum
class Main
    action Main
        integer a = 8 / 4
        output a
        output 8 / 4
    end
end