Quorum/Library/Tests/Expressions/Fail/VariableNamedAsKeyword.quorum
class Main 
    //this is not allowed
    integer parent = 4 

    action Main
    end 
end